2002-11-16  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGGLContext.m (-initWithFormat:shareContext:): Remove
	assert.

	* Source/x11/XGServerWindow.m ([XGServer -setinputstate::]): Return
	if window is NULL.

2002-11-16  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/x11/XGOpenGL.h: Added define to avoid collision of
	parameters named "id" in some versions of the OpenGL headers
	with the Objective-C type "id".   This was causing build of
	back to fail.

2002-11-15  Frederic De Jaeger <dejaeger@free.fr>

	* Source/x11/XGGLFormat.m, Source/x11/XGGLContext.m
	  Headers/x11/XGOpenGL.h: New files.
	* Source/x11/Makefile: Updated.
	* configure.ac: add a test for GLX
	* Source/x11/XGServer.m (glContextClass,
          glPixelFormatClass): Implement.

2002-11-08  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Reassert focus and/or send FocusIn event in all cases.

2002-10-29  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -_checkWindowManager]):
	Make sure not to dereference possible NULL pointer.

2002-10-28  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-DPSsetalpha:): Use GSsetalpha
	as defined in frontend, for printers that don't support setalpha.

2002-10-27  Adam Fedor  <fedor@gnu.org>

	* Tools/font_cacher.m: Add @end (Reported by Caba Conti
	<520040438669-0001@t-online.de>).

2002-10-21  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XIMInputServer.m
	([XIMInputServer -initWithDelegate:display:name:]): Use
	GSEncodingFromLocale.
	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Idem.
	* Source/xlib/XftFontInfo.m ([XftFontInfo -setupAttributes]): Idem.

2002-10-19  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Don't set desiredFocusWindow to 0.
	([XGServer
	-receivedEvent:type:extra:forMode:] (FocusOut): Hack: if focus