@@ -1,3 +1,12 @@
+2002-11-21  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/gsc/GSGState.m
+	Implemented [GSSendBezierPath:].
+	* Source/gsc/GSStreamContext.m
+	Removed (empty) implementation of [GSSendBezierPath:].
+	* Source/x11/XGServer.m
+	Added #ifdef around include of XGOpenGL.h.
+
 2002-11-16  Adam Fedor  <fedor@gnu.org>
 
 	* Source/x11/XGGLContext.m (-initWithFormat:shareContext:): Remove
